book swagger 초고  생성
