# node/src/config/swagger.yaml
@@ -198,6 +198,13 @@ paths:
                 properties:
                   message:
                     type: string
+  /book:
+    get:
+      summary: Retrieve of all books in DB.
+      description: Fetches a list of books from the database.
+      responses:
+        '200':
+          description: A sucessful response with an array of books.
   /api/v1/protected/hello:
     get:
       summary: Protected hello endpoint
